--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -140,27 +140,35 @@ $breakpoint: 550px;
 }
 
 .result-infoview {
-    width: 320px;
-    height: 240px;
-    overflow: hidden;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-    position: relative;
+    width: 200px;
+    background-color: $color-background;
+    padding: $standard-spacing / 2;
+
+    &__image-holder {
+        padding-bottom: 66.66667%;
+    }
+
+    &__image {
+        width: 100%;
+        height: auto;
+        float: left;
+    }
 
     &__body {
-        display: block;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        background-color: rgba(255,255,255, 0.8);
-        padding: 0 $standard-spacing / 2 0 $standard-spacing / 2;
-        color: black;
         text-decoration: none;
     }
 
     &__title {
-        margin-bottom: 0;
+        background-color: white;
+        color: black;
+        text-decoration: none;
+        font-size: 120%;
+        padding: $standard-spacing / 2;
+        margin: 0;
+        font-weight: normal;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 }
 
