add payment step to booking flow.

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -29,6 +29,8 @@
                 </div>
             </div>
             <hr>
+            <%= render partial: "payment", locals: {booking: @booking} %>
+            <hr>
             <%= render partial: "conversation_section", locals: {booking: @booking} %>
         </div>
     </div>
