Added legaleese to footer

--- a/app/assets/stylesheets/_main_footer.scss
+++ b/app/assets/stylesheets/_main_footer.scss
@@ -18,4 +18,9 @@
     &__list-link {
         color: white;
     }
+    
+    &__legaleese {
+        color: gray;
+        font-size: 50%;
+    }
 }
