--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -28,5 +28,12 @@
                 </ul>
             </div>
         </div>
+        <div class="about-footer__legaleese">
+            Innholdet er beskyttet etter åndsverksloven. Bruk av 
+            automatiserte tjenester (roboter, spidere, indeksering m.m.)
+            samt andre fremgangsmåter for systematisk eller regelmessig bruk
+            er ikke tillatt uten eksplisitt samtykke fra plendit.
+            <%= link_to 'Personvernpolicy', '#' %> - © Plendit AS 2015
+        </div>
     </div>
 </footer>
