--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -53,7 +53,7 @@
                     </li>
                     <li>
                         Antall dager:
-                        <span class="u-pull-right" data-day-count>aasdf</span>
+                        <span class="u-pull-right" data-day-count>0</span>
                     </li>
                     <li>
                         Pris per dag:
