Added link to terms from provider box

--- a/app/views/users/_provider_logins.html.erb
+++ b/app/views/users/_provider_logins.html.erb
@@ -6,4 +6,9 @@
     <br>
     <br>
     <%= link_to social_button(:spid, nil), user_omniauth_authorize_path(:spid) %>
+    <br>
+    <br>
+    <p>
+        Ved å logge inn aksepterer du <%= link_to 'brukervilkårene.', terms_path %>
+    </p>
 </div>
