--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -406,6 +406,10 @@ form {
   text-decoration: underline;
 }
 
+.u-no-underline {
+  text-decoration: none;
+}
+
 summary::-webkit-details-marker {
   display: none;
 }
