--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -11,7 +11,7 @@
                 <strong>Aftenposten</strong> eller <strong>FINN</strong> allerede, så kan du logge rett inn.
             </p>
 
-            <%= render partial: "users/provider_logins" %>
+            <%= render partial: "users/provider_signups" %>
 
             <hr>
 
