--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,7 +25,7 @@
                 <ul>
                     <li><%= link_to "Rediger personalia", anchor: "personal-info" %></li>
                     <li><%= link_to "Legg til kredittkort", user_payment_cards_path %></li>
-                    <li><%= link_to "Rediger adresser", anchor: "locations" %></li>
+                    <li><%= link_to "Adresser", anchor: "locations" %></li>
                     <li><%= link_to "Bytte passord", anchor: "password" %></li>
                     <li><%= link_to "Rediger tilkoblede kontoer", anchor: "identities" %></li>
                 </ul>
