--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -32,7 +32,7 @@
             Innholdet er beskyttet etter åndsverksloven. Bruk av 
             automatiserte tjenester (roboter, spidere, indeksering m.m.)
             samt andre fremgangsmåter for systematisk eller regelmessig bruk
-            er ikke tillatt uten eksplisitt samtykke fra plendit.
+            er ikke tillatt uten eksplisitt samtykke fra plendit.<br>
             <%= link_to 'Personvernpolicy', '#' %> - © Plendit AS 2015
         </div>
     </div>
