--- a/app/views/locations/_list.html.erb
+++ b/app/views/locations/_list.html.erb
@@ -1,20 +1,22 @@
 <%= render layout: "gray_box", locals: {title: "Adresser", id: "locations"} do %>
     <div>
-        <ol  class="locations-list">
+        <ol class="locations-list">
             <% @user.locations.each do |location| %>
-                <li>
-                    <% if location.favorite %>
-                        <%= evil_icon 'ei-star', size: :s, class: 'locations-list__favorite-button locations-list__favorite-button--gold' %>
+                <li class="locations-list__item">
+                    <span class="locations-list__star-holder">
+                    <% if location.favorite? %>
+                        <%= evil_icon 'ei-star', size: :s, class: 'u-fill-gold locations-list__star-button' %>
                     <% else %>
-                        <%= button_to make_favorite_location_path(location), class: "button", form_class: "u-inline" do %>
-                            <%= evil_icon 'ei-star', size: :s, class: 'locations-list__favorite-button' %>
+                        <%= button_to make_favorite_location_path(location), class: 'locations-list__star-button', form_class: 'u-inline' do %>
+                            <%= evil_icon 'ei-star', size: :s, class: 'u-fill-gray' %>
                         <% end %>
                     <% end %>
+                    </span>
                     <span>
                         <%= "#{location.address_line}, #{location.post_code} #{location.city}" %>
                         <small><%= link_to "Rediger", edit_location_path(location) %></small>
                     </span>
-                    <span><%= button_to 'Slett', location, method: :delete, class: "button", form_class: "u-inline u-pull-right", data: {confirm: 'Er du sikker på at du vil slette?'} %></span>
+                    <span><%= button_to 'Slett', location, method: :delete, class: 'button', form_class: 'u-inline u-pull-right', data: {confirm: 'Er du sikker på at du vil slette?'} %></span>
                 </li>
             <% end %>
         </ol>
