Fixed frontpage search categories and category checkboxes on loading result page

--- a/app/views/ads/_search_filter_section.html.erb
+++ b/app/views/ads/_search_filter_section.html.erb
@@ -28,7 +28,7 @@
                         <% @ad_categories.each do |a| %>
                             <div class="three columns">
                                 <%= label_tag do %>
-                                    <%= check_box_tag "category[]", a[:category] %>
+                                    <%= check_box_tag "category[]", a[:category], @selected_categories.include?(a[:category]) %>
                                     <span class="label-body"><%= a[:title] %></span>
                                 <% end %>
                             </div>
