--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -13,18 +13,15 @@ $top-bar-height: 52px;
         height: $top-bar-height * 2;
     }
 
-
     &__form {
         display: inline;
     }
-
 
     &__search-holder {
         background-color: white;
         padding: 4px;
         margin-left: 12px;
         border: solid thin $color-box-border;
-
     }
 
     & &__search-input {
@@ -74,7 +71,6 @@ $top-bar-height: 52px;
     &__search-icon {
         vertical-align: middle;
     }
-
 
     &__logo-link {
         &:hover {
@@ -130,11 +126,9 @@ $top-bar-height: 52px;
     }
 
     &__admin-link {
-        background-color: red;
+        background-color: #b51b1b;
         color: white;
-        border-radius: 6px;
         padding: 6px;
+        box-shadow: $subtle-shadow;
     }
-
 }
-
