--- a/app/assets/stylesheets/_ad_gallery_mosaic.scss
+++ b/app/assets/stylesheets/_ad_gallery_mosaic.scss
@@ -45,14 +45,13 @@
     &__gallery-link {
         display: block;
         position: absolute;
-        top: 20px;
-        bottom: 20px;
-        left: 20px;
-        right: 20px;
-        background-color: rgba(0,0,0,0.5);
-        color: white;
         text-align: center;
-        padding-top: 30%;
+        width: 100%;
+        padding-top: 25%;
         text-decoration: none;
+        color: white;
+        font-size: 2rem;
+        text-shadow: 0 1px 10px rgba(black, 0.7),
+                     0 1px 2px rgba(black, 0.5);
     }
 }
