--- a/app/assets/stylesheets/_ad_booking_box.scss
+++ b/app/assets/stylesheets/_ad_booking_box.scss
@@ -24,7 +24,7 @@
 
     &__button-holder {
         text-align: center;
-        padding: $standard-spacing * 2;
+        padding-bottom: $standard-spacing;
     }
 
     &__period {
