--- a/app/views/shared/_profile_quality_box.html.erb
+++ b/app/views/shared/_profile_quality_box.html.erb
@@ -2,7 +2,7 @@
     <table class="profile-quality-box__table">
         <tr class="profile-quality-box__row">
             <th class="profile-quality-box__th">
-                <%= image_tag("time_icon.png", size: "19x19", alt: "" ) %>
+                <%= image_tag("time_icon.png", size: "19x19", alt: "", class: "profile-quality-box__icon" ) %>
                 Svartid:
             </th>
             <td class="profile-quality-box__td">
@@ -11,7 +11,7 @@
         </tr>
         <tr class="profile-quality-box__row">
             <th class="profile-quality-box__th">
-                <%= image_tag("speech_bubble_icon.png", size: "19x19", alt: "" ) %>
+                <%= image_tag("speech_bubble_icon.png", size: "19x19", alt: "", class: "profile-quality-box__icon" ) %>
                 Svarprosent:
             </th>
             <td class="profile-quality-box__td">
@@ -20,7 +20,7 @@
         </tr>
         <tr class="profile-quality-box__row">
             <th class="profile-quality-box__th">
-                <%= image_tag("time_icon.png", size: "19x19", alt: "") %>
+                <%= image_tag("time_icon.png", size: "19x19", alt: "", class: "profile-quality-box__icon") %>
                 Sist sett:
             </th>
             <td class="profile-quality-box__td">
