add notice of a missing feature

--- a/app/views/misc/issues.html.erb
+++ b/app/views/misc/issues.html.erb
@@ -20,4 +20,5 @@
 <ul>
     <li>Betaling mangler</li>
     <li>Booking er ikke skrudd på siden betaling mangler</li>
+    <li>Det er ikke mulig å laste opp legitimasjon</li>
 </ul>
