Fixed typo and link on issues page

--- a/app/views/misc/issues.html.erb
+++ b/app/views/misc/issues.html.erb
@@ -5,8 +5,8 @@
     tilbakemeldinger. Enten kan du bruke + knappen nederst i høyre hjørne
     for å chatte, send oss en epost på 
     <%= mail_to Rails.configuration.x.customerservice.email, Rails.configuration.x.customerservice.email %>,
-    snakk til oss på #finn-sandbox-plendig på slack, eller gå å pirk på
-    en av oss i kontorlandskapet.
+    snakk til oss på <%= link_to '#finn-sandbox-plendit', 'https://sch-chat.slack.com/messages/finn-sandbox-plendit/' %>
+    på slack, eller gå å pirk på en av oss i kontorlandskapet.
 </p>
 
 
