--- a/app/views/misc/issues.html.erb
+++ b/app/views/misc/issues.html.erb
@@ -2,11 +2,11 @@
 
 <p class="u-push-down">
     Hei! Takk for at du tar deg tid til å teste plendit. Vi tar gjerne imot
-    tilbakemeldinger. Enten kan du bruke + knappen nederst i høyre hjørne
+    tilbakemeldinger. Enten kan du bruke <%= evil_icon 'ei-comment'  %> knappen nederst i høyre hjørne
     for å chatte, send oss en epost på 
     <%= mail_to Rails.configuration.x.customerservice.email, Rails.configuration.x.customerservice.email %>,
     snakk til oss på <%= link_to '#finn-sandbox-plendit', 'https://sch-chat.slack.com/messages/finn-sandbox-plendit/' %>
-    på slack, eller gå å pirk på en av oss i kontorlandskapet.
+    på slack, eller kom å pirk på en av oss i kontorlandskapet.
 </p>
 
 
