Fix links in footer

--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -33,7 +33,8 @@
             automatiserte tjenester (roboter, spidere, indeksering m.m.)
             samt andre fremgangsmåter for systematisk eller regelmessig bruk
             er ikke tillatt uten eksplisitt samtykke fra plendit.
-            <%= link_to 'Personvernpolicy', '#' %> &mdash; © Plendit AS 2015
+            <%= link_to 'Brukervilkår', terms_path %> &mdash;
+            <%= link_to 'Personvernpolicy', privacy_path %> &mdash; © Plendit AS 2015
         </div>
     </div>
 </footer>
