--- a/app/views/misc/terms.html.erb
+++ b/app/views/misc/terms.html.erb
@@ -1,4 +1,7 @@
-<h1>Om plendit</h1>
+<h1>Brukervilkår</h1>
+
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, dolorem excepturi expedita inventore laboriosam magnam minima molestiae nemo quidem recusandae similique sunt voluptatem. Ab aliquid eius, ex maxime quam repellat!</p>
 
-<iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
+<ul>
+  <li> <%= link_to 'MangoPay terms and conditions', 'docs/Mangopay_Terms-EN.pdf' %>.</li>
+</ul>
