Better styling of favorite button on ad page

--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -21,7 +21,7 @@
             <%= f.hidden_field :previous_url, value: request.fullpath %>
             <% if ad.is_favorite_of( current_user ) %>
                 <%= f.button class: "button booking-request-form__book-button" do %>
-                    <%= evil_icon 'ei-heart', size: :s, class: "booking-request-form__heart--favorite" %>
+                    <%= evil_icon 'ei-heart', size: :s, class: "u-fill-gold booking-request-form__heart" %>
                     Fjern fra favoritter
                 <% end %>
             <% else %>
