--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -12,7 +12,7 @@
             <div class="four columns">
                 <h6 class="about-footer__title">Kundeservice</h6>
                 <ul class="about-footer__list">
-                    <li class="about-footer__list-item"><%= link_to 'Ofte stilte spørsmål',  Rails.configuration.x.customerservice.website, class: "about-footer__list-link" %></li>
+                    <li class="about-footer__list-item"><%= link_to 'Ofte stilte spørsmål',  Rails.configuration.x.customerservice.website, target: '_blank', class: "about-footer__list-link" %></li>
                     <li class="about-footer__list-item"><%= link_to 'Kontaktinformasjon', contact_path, class: "about-footer__list-link" %></li>
                     <li class="about-footer__list-item"><%= link_to 'Om oss', about_us_path, class: "about-footer__list-link" %></li>
                 </ul>
