Twiddled frontpage lie

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -12,7 +12,7 @@
 
     <div class="front-search-block__splash">
         <h1 class="front-search-block__title">LEI DET DU TRENGER</h1>
-        <p class="front-search-block__copy">og spar penger! Mer enn <%= Rails.configuration.x.view.current_num_ads %> ting til leie.</p>
+        <p class="front-search-block__copy">Og spar penger! Massevis av ting til leie.</p>
 
         <div>
             <%= form_tag("/search", method: "get") do %>
