--- a/app/views/misc/issues.html.erb
+++ b/app/views/misc/issues.html.erb
@@ -21,5 +21,6 @@
     <li>Betaling mangler</li>
     <li>Booking er ikke skrudd på siden betaling mangler</li>
     <li>Det er ikke mulig å laste opp legitimasjon</li>
-    <li>Det er mulig å legge ut annonse med forsiking, selom utleie pris per dag er under 160 kr, og verdi er under 4000 kr.</li>
+    <li>Det er mulig å legge ut annonse med forsiking, selv om utleie pris
+        per dag er under 160 kr, og verdi er under 4000 kr.</li>
 </ul>
