--- a/app/views/misc/issues.html.erb
+++ b/app/views/misc/issues.html.erb
@@ -1,14 +1,17 @@
-<h1>Takk for hjelpen!</h1>
+<div>
+    <%= image_tag 'plendbot/robot_profile_01.png', class: 'large-plendbot-face u-pull-right' %>
+    <h1>Takk for hjelpen!</h1>
 
-<p class="u-push-down">
-    Hei! Takk for at du tar deg tid til å teste plendit. Vi tar gjerne imot
-    tilbakemeldinger. Enten kan du bruke <%= evil_icon 'ei-comment'  %> knappen nederst i høyre hjørne
-    for å chatte, send oss en epost på 
-    <%= mail_to Rails.configuration.x.customerservice.email, Rails.configuration.x.customerservice.email %>,
-    snakk til oss på <%= link_to '#finn-sandbox-plendit', 'https://sch-chat.slack.com/messages/finn-sandbox-plendit/' %>
-    på slack, eller kom å pirk på en av oss i kontorlandskapet.
-</p>
+    <p class="u-push-down">
 
+        Hei! Takk for at du tar deg tid til å teste plendit. Vi tar gjerne imot
+        tilbakemeldinger. Enten kan du bruke <%= evil_icon 'ei-comment'  %> knappen nederst i høyre hjørne
+        for å chatte, send oss en epost på 
+        <%= mail_to Rails.configuration.x.customerservice.email, Rails.configuration.x.customerservice.email %>,
+        snakk til oss på <%= link_to '#finn-sandbox-plendit', 'https://sch-chat.slack.com/messages/finn-sandbox-plendit/' %>
+        på slack, eller kom å pirk på en av oss i kontorlandskapet.
+    </p>
+</div>
 
 <h1>Kjente problemer</h1>
 
