--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,9 +61,10 @@ summary {
 }
 
 .large-plendbot-face {
-    background-color: rgb(237, 230, 217);
+    background-color: rgb(207, 238, 255);
     padding: 12px;
     margin: 12px;
     border-radius: 50%;
     border: solid 3px white;
+    box-shadow: $subtle-shadow;
 }
