Wider general pages

--- a/app/views/layouts/article.html.erb
+++ b/app/views/layouts/article.html.erb
@@ -1,7 +1,7 @@
 <% content_for :content do %>
     <div class="container u-push-down">
         <div class="row">
-            <div class="eight columns">
+            <div class="ten columns">
                 <%= yield %>
             </div>
         </div>
