--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -110,6 +110,13 @@
 
     <% end %>
 
+    <% if @ad.category == 'motor' %>
+    <div class="u-push-down">
+        <label>Registreringsnummer</label>
+        <%= f.text_field :registration_number, class: 'u-full-width', placeholder: "Regnr" %>
+    </div>
+    <% end %>
+
     <div class="u-push-down">
         <label>Beskrivelse</label>
         <%= f.text_area :body, class: 'u-full-width', data: { controller: 'autoSizeTextArea' } %>
